# rocket-sqlx

./: .env.example  .gitignore  Cargo.toml  README.md  justfile
.sqlx/: query-03863ac25946e619c28d26d62f99f7348eaa790ee9f9dc094e279f1a998c0055.json  query-0df0fcb5d6e195caa32a44dccf661f794ef2125a2c10e680c18f1051a70b3b33.json  query-18569f1b849f8f605957db9835d8b2dc6e37ec76c8c49e7895241ef5252ff19e.json  query-2848ab4ab41f16c1a8132841ec1a50b3507d21b314e8664c3d9e81d6f60fac1c.json  query-3e4e5c4be44ef130a6e886ed815bdf3e8d3d3f61e17713aa10f9912522cd84ca.json  query-45c9dd6d6afd105b05c59b0368859dc71a0a9445cd140730e0680d4003d1e487.json  query-6209bcb1c70d90cb7a8708b7a4a8517719a5ad994c867370223e6f59cca4bef2.json  query-6a195d0282baac5939aab55932e7626bc6921bdbcd7d930a4fed1421d2e3b870.json  query-80a5e5fc950593bda30dad564f43ad9ac59ae7e408cc8e17cbc8208f0c139cc7.json  query-8854345bf2c611cc22d503e3e796a42c360fd33d600d928074e207f0518b43a3.json  query-92c9e41e51247b524c928e9198a4d3a86a2914fed66cc2d4c0f4a956516796eb.json  query-b86c5cdce14ae18b21597c7ddb8d2319ff200ba2e6dc186a96eb67a09a7a6cce.json  query-f0f47adc350181276bc71f1bb9b74c1be4b2151e8cef965225b8b3a67f48a630.json
migrations/: 20260202071257_initial.sql
src/: db.rs  lib.rs  main.rs  util.rs
src/handlers/: mod.rs  posts.rs  session.rs
src/tests/: mod.rs  posts.rs  session.rs  util.rs
