[package]
name = "rocket-sqlx"
version = "0.0.0"
edition = "2024"
publish = false

[dependencies]
argon2 = "0.5.3"
chrono = { version = "0.4", features = ["serde"] }
dotenv = "0.15.0"
mail_struct = "0.1.21"
nanoid = "0.4.0"
once_cell = "1.21.3"
rand = "0.9.2"
regex = "1.12.2"
rocket = { version = "0.5.1", features = ["json", "secrets", "uuid"] }
#I forked rocket_db_pools to set sqlite options like synchronous=NORMAL 
# and temp_store=MEMORY - improves write performance 30%
#rocket_db_pools = { version = "0.2", features = ["sqlx_sqlite"] }
rocket_db_pools = { git = "https://github.com/bdombro/rocket_db_pools", branch = "main", features = ["sqlx_sqlite"] }
smtp_send = "0.1.29"
sqlx = { version = "0.7", default-features = false, features = ["macros", "migrate", "chrono"] }
